页面布局，js分步实现
页面完成布局，js完成函数基本

--- a/index.html
+++ b/index.html
@@ -6,7 +6,23 @@
 	<script type="text/javascript" src="script/task.js"></script>
 </head>
 <body>
+	<fieldset id="form-gra-time">
+		<legend>请选择日期粒度：</legend>
+		<label>日<input type="radio" name="gra-time" value="day" checked="checked"></label>
+		<label>周<input type="radio" name="gra-time" value="week"></label>
+		<label>月<input type="radio" name="gra-time" value="month"></label>
+	</fieldset>
 
+	<fieldset>
+		<legend>请选择查看的城市：</legend>
+		<select id="city-select">
+			<option>北京</option>
+		</select>
+	</fieldset>
+
+	<div class="aqi-chart-wrap">
+		
+	</div>
 
 </body>
 </html>
