使用dom模拟柱形图
模拟柱形图，对dom模拟

--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
 	<fieldset>
 		<legend>请选择查看的城市：</legend>
 		<select id="city-select">
+			<option>--请选择城市--</option>
 			<option>北京</option>
+			<option>上海</option>
 		</select>
 	</fieldset>
 
 	<div class="aqi-chart-wrap">
-		
+		aaa
 	</div>
 
 </body>
