--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>IFE JavaScript task 17</title>
-	<script type="text/javascript" src="script/task.js"></script>
+	<link rel="stylesheet" type="text/css" href="script/style.css">
+
 </head>
 <body>
 	<fieldset id="form-gra-time">
@@ -18,13 +19,12 @@
 		<select id="city-select">
 			<option>--请选择城市--</option>
 			<option>北京</option>
-			<option>上海</option>
 		</select>
 	</fieldset>
 
 	<div class="aqi-chart-wrap">
-		aaa
+		
 	</div>
-
+	<script type="text/javascript" src="script/task.js"></script>
 </body>
 </html>
